<?xml version="1.0"?>
<package>
  <name>godel_process_execution</name>
  <version>0.1.0</version>
  <description>
    This package is responsible for the execution of process plans generated
    by packages like godel_process_planning. It handles motion and IO for the
    tool, and is specialized for different robot vendors.
  </description>

  <maintainer email="jmeyer@swri.org">Jonathan Meyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>abb_file_suite</build_depend>
  <build_depend>godel_msgs</build_depend>
  <build_depend>industrial_robot_simulator_service</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>abb_file_suite</run_depend>
  <run_depend>godel_msgs</run_depend>
  <run_depend>industrial_robot_simulator_service</run_depend>
  <run_depend>trajectory_msgs</run_depend>
</package>
