<?xml version="1.0"?>
<package format="2">
  <name>godel_process_execution</name>
  <version>0.1.0</version>
  <description>
    This package is responsible for the execution of process plans generated
    by packages like godel_process_planning. It handles motion and IO for the
    tool, and is specialized for different robot vendors.
  </description>

  <maintainer email="jmeyer@swri.org">Jonathan Meyer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>abb_file_suite</depend>
  <depend>godel_msgs</depend>
  <depend>godel_utils</depend>
  <depend>industrial_robot_simulator_service</depend>
  <depend>trajectory_msgs</depend>
  <depend>keyence_experimental</depend>
  <depend>swri_profiler</depend>

</package>
