<?xml version="1.0"?>
<package>
  <name>godel_process_path_generation</name>
  <version>0.0.0</version>
  <description>The godel_process_path_generation package creates the high-level process path for surface blending.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="dpsolomon@gmail.com">Daniel Solomon</maintainer>
  <license>Apache2</license>
  <url type="website">https://github.com/ros-industrial-consortium/godel</url>
  <author email="dpsolomon@gmail.com">Daniel Solomon</author>

  <!-- Build/run/test depends -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <!-- <run_depend></run_depend> -->
  
  <!-- <test_depend></test_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
