<?xml version="1.0"?>
<package>
  <name>godel_process_path_generation</name>
  <version>0.0.0</version>
  <description>The godel_process_path_generation package creates the high-level process path for surface blending.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="dpsolomon@gmail.com">Daniel Solomon</maintainer>
  <license>Apache2</license>
  <url type="website">https://github.com/ros-industrial-consortium/godel</url>
  <author email="dpsolomon@gmail.com">Daniel Solomon</author>

  <!-- Build/run/test depends -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>godel_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>godel_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>eigen_conversions</run_depend>
    
  <!-- <test_depend></test_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
