<?xml version="1.0"?>
<package>
  <name>godel_robot_config</name>
  <version>0.0.0</version>
  <description>The godel_robot_config package</description>
  <maintainer email="jnicho@swri.org">jnicho</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>


  <export>
  </export>
</package>
