<?xml version="1.0"?>
<package>
  <name>godel_scan_analysis</name>
  <version>0.1.0</version>
  <description>
    Subscribes to data from a laser line scanner and scores lines
    individually based on some surface quality metric
  </description>

  <maintainer email="jonathan.meyer@swri.org">Jon Meyer</maintainer>
  <author email="jonathan.meyer@swri.org">Jon Meyer</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>godel_keyence_ljv_driver</run_depend>
  <run_depend>keyence_ljv_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>
