<?xml version="1.0"?>
<package>
  <name>godel_scan_analysis</name>
  <version>0.0.0</version>
  <description>Generates colorized point clouds from individual profilimeter
  laser scans. </description>

  <maintainer email="jonathan.meyer@swri.org">Jon Meyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>

</package>
