<?xml version="1.0"?>
<package format="2">
  <name>godel_scan_analysis</name>
  <version>0.0.0</version>
  <description>Generates colorized point clouds from individual profilimeter
  laser scans. </description>

  <maintainer email="jonathan.meyer@swri.org">Jon Meyer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pcl_ros</depend>
  <depend>roscpp</depend>

</package>
