<?xml version="1.0"?>
<package format="2">
  <name>godel_simple_gui</name>
  <version>0.1.0</version>
  <description>The godel_simple_gui package presents an alternative front end for the Godel project that is focused on providing an easy to use, ATM-like interface for operating the system end to end.</description>

  <maintainer email="jmeyer@swri.org">Jonathan Meyer</maintainer>
  <author email="jmeyer@swri.org">Jonathan Meyer</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>godel_msgs</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>

  <export>
   <rviz plugin="${prefix}/plugin.xml"/>
  </export>

</package>
